argo/secure-pod.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: security-admission
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.29

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: security-admission
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      securityContext:
        runAsUser: 9964
        runAsGroup: 9964
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: nginx
          name: nginx
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
