argo/constraints.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-pod-security-admission
spec:
  enforcementAction: deny
  match:
    excludedNamespaces:
      - kube-system
      - argocd
      - gatekeeper-system
    kinds:
      - apiGroups:
         - ""
        kinds:
          - Namespace
  parameters:
    message: "All namespaces must have an `owner` label that points to your company username"
    labels:
      - key: pod-security.kubernetes.io/warn
        allowedRegex: restricted
      - key: pod-security.kubernetes.io/warn-version:
        allowedRegex: v1.27
